Refactor flash messages to partial in user

--- a/app/views/user/_change_password.html.erb
+++ b/app/views/user/_change_password.html.erb
@@ -2,19 +2,21 @@
   <div class="container large-9"> 
     <div class="row">
       <div class="container small-8 large-5">
-      <h3 class="no-margin">Change Password</h3>
-      <h6 class="subheader margin-bottom-2"></h6>
-      <%= form_tag do %>
-        <%= label_tag(:oldpass, "Original Password:") %>
-        <%= password_field_tag(:oldpass) %> 
-        <%= label_tag(:pass, "New Password:") %>
-        <%= password_field_tag(:pass) %>
-        <%= label_tag(:repass, "Confirm Password:") %>
-        <%= password_field_tag(:repass) %>
-        <BR>
-        <%= submit_tag("Submit", :class=>"button small") %>
-        <BR>
-      <% end %>
+        <%= render :partial => 'user/flashmessage' %>
+
+        <h3 class="margin-top-1">Change Password</h3>
+        <h6 class="subheader margin-bottom-2"></h6>
+        <%= form_tag do %>
+          <%= label_tag(:oldpass, "Original Password:") %>
+          <%= password_field_tag(:oldpass) %> 
+          <%= label_tag(:pass, "New Password:") %>
+          <%= password_field_tag(:pass) %>
+          <%= label_tag(:repass, "Confirm Password:") %>
+          <%= password_field_tag(:repass) %>
+          <BR>
+          <%= submit_tag("Submit", :class=>"button small") %>
+          <BR>
+        <% end %>
     </div>
   </div>
 </div>
