--- a/app/views/user/_login.html.erb
+++ b/app/views/user/_login.html.erb
@@ -1,15 +1,15 @@
 
     <div id="login-modal" class="reveal-modal wrapper-modal" style="display: none;">
       <div class="container large-9"> 
+
+        <%= render :partial => 'user/flashmessage' %>
+
         <h3>RotoStarter Log In</h3>
         <%= form_tag do %>
           <%= label_tag(:email, "Email:") %>
           <%= text_field_tag(:email) %>
           <%= label_tag(:pass, "Password:") %>
           <%= password_field_tag(:pass) %>
-          <% flash.each do |name, msg| %>
-            <%= content_tag :span, msg, :id => "flash_#{name}", :class=>"flash_message" %>
-          <% end %>
           <br><br>
           <input name="commit" type="submit" class="button" value="Log In"/>
           <br>
