--- a/app/views/user/change_password.html.erb
+++ b/app/views/user/change_password.html.erb
@@ -2,23 +2,23 @@
   <div class="container large-9"> 
     <div class="row">
       <div class="container small-8 large-5">
-      <h3 class="margin-top-2">Change Password</h3>
-      <h6 class="subheader margin-bottom-2"><%=@user.email%></h6>
-      <%= form_tag do %>
-        <%= label_tag(:oldpass, "Original Password:") %>
-        <%= password_field_tag(:oldpass) %> 
-        <%= label_tag(:pass, "New Password:") %>
-        <%= password_field_tag(:pass) %>
-        <%= label_tag(:repass, "Confirm Password:") %>
-        <%= password_field_tag(:repass) %>
-        <BR>
-        <%= submit_tag("Submit", :class=>"button small") %>
-        <BR>
-          
-        <span class="flash_message"><%= @user.errors.full_messages.first if @user.errors.any? %></span>
-        <% flash.each do |name, msg| %>
-          <%= content_tag :span, msg, :id => "flash_#{name}", :class=>"flash_message" %>
+        <span class="flash_message alert-box alert"><%= @user.errors.full_messages.first if @user.errors.any? %></span>
+        <%= render :partial => 'user/flashmessage' %>
+
+        <h3 class="margin-top-1">Change Password</h3>
+        <h6 class="subheader margin-bottom-2"><%=@user.email%></h6>
+        <%= form_tag do %>
+          <%= label_tag(:oldpass, "Original Password:") %>
+          <%= password_field_tag(:oldpass) %> 
+          <%= label_tag(:pass, "New Password:") %>
+          <%= password_field_tag(:pass) %>
+          <%= label_tag(:repass, "Confirm Password:") %>
+          <%= password_field_tag(:repass) %>
+          <BR>
+          <%= submit_tag("Submit", :class=>"button small") %>
+          <BR>
+      
         <% end %>
-      <% end %>
+      </div>
     </div>
   </div>
