--- a/app/views/user/_forgot_password.html.erb
+++ b/app/views/user/_forgot_password.html.erb
@@ -2,7 +2,9 @@
   <div class="container large-9"> 
     <div class="row">
       <div class="container small-8 large-5">
-        <h1 class="no-margin">Forgot Password</h1>
+        <%= render :partial => 'user/flashmessage' %>
+
+        <h3 class="margin-top-1">Forgot Password</h3>
         <h6 class="subheader margin-bottom-2">To reset your password, enter your email address below.&nbsp;&nbsp;A new password will be sent to you by email.</h6>
         <%if (@show)%>
           <%= form_tag do %>
@@ -10,10 +12,6 @@
             <%= text_field_tag(:email) %> 
             <%= submit_tag("Submit", :class=>"button small") %>
             <BR>
-              
-            <% flash.each do |name, msg| %>
-              <%= content_tag :span, msg, :id => "flash_#{name}", :class=>"flash_message" %>
-            <% end %>
           <% end %>  
         <%else%>
           <p>Your password recovery email is on its way!</p>
