--- a/app/views/user/_signup.html.erb
+++ b/app/views/user/_signup.html.erb
@@ -1,5 +1,7 @@
     <div id="signup-modal" class="reveal-modal wrapper-modal" style="display: none;">
       <div class="container large-9"> 
+          <%= render :partial => 'user/flashmessage' %>
+
           <h3>RotoStarter Sign Up</h3>
             <%= form_tag '/user/signup' do %>
               <div style="margin:0;padding:0;display:inline">
@@ -12,9 +14,6 @@
               <%= password_field_tag(:pass) %>
               <%= label_tag(:repass, "Confirm Password:") %>
               <%= password_field_tag(:repass) %>
-              <% flash.each do |name, msg| %>
-                <%= content_tag :span, msg, :id => "flash_#{name}", :class=>"flash_message txt-red" %>
-              <% end %>
               <br><br>
               <input name="commit" type="submit" class="button" value="Sign Up"/>
               <br>
