--- a/app/views/teams/index.html.erb
+++ b/app/views/teams/index.html.erb
@@ -40,7 +40,7 @@
 
 </div>
 
-<div id="teamwindow-modal" class="reveal-modal" style="display: none;">
+<div id="teamwindow-modal" class="reveal-modal wrapper-modal" style="display: none;">
 	<%= render :partial => "manage"	%>
   <a class="close-reveal-modal">×</a>
 </div>
