--- a/app/views/user/change_password.html.erb
+++ b/app/views/user/change_password.html.erb
@@ -2,11 +2,14 @@
   <div class="container large-9"> 
     <div class="row">
       <div class="container small-8 large-5">
-        <span class="flash_message alert-box alert"><%= @user.errors.full_messages.first if @user.errors.any? %></span>
+        <% if !@user.errors.full_messages.first.blank? %>
+        <span class="flash_message alert-box alert">
+          <%= @user.errors.full_messages.first if @user.errors.any? %></span>
+        <% end %>
         <%= render :partial => 'user/flashmessage' %>
 
-        <h3 class="margin-top-1">Change Password</h3>
-        <h6 class="subheader margin-bottom-2"><%=@user.email%></h6>
+        <h3 class="margin-top-1 margin-bottom-0">Change Password</h3>
+        <h6 class="subheader margin-top-0 margin-bottom-2"><%=@user.email%></h6>
         <%= form_tag do %>
           <%= label_tag(:oldpass, "Original Password:") %>
           <%= password_field_tag(:oldpass) %> 
@@ -15,7 +18,7 @@
           <%= label_tag(:repass, "Confirm Password:") %>
           <%= password_field_tag(:repass) %>
           <BR>
-          <%= submit_tag("Submit", :class=>"button small") %>
+          <%= submit_tag("Submit", :class=>"button") %>
           <BR>
       
         <% end %>
