--- a/app/views/user/signup.html.erb
+++ b/app/views/user/signup.html.erb
@@ -9,7 +9,7 @@
         <ul class="disc">
           <li>Sets your lineup for you every day</li>
           <li>Makes game time substitutions</li>
-          <li>Autopilots when you are on vacation</li>
+          <li>Autopilot for when you are on vacation</li>
         </ul>
       </div>
     </div>
