--- a/app/views/teams/_dashboard_website.html.erb
+++ b/app/views/teams/_dashboard_website.html.erb
@@ -14,7 +14,7 @@
             </h6>
             <h6 class="left subheader league-type-header margin-left-1">
               <img src="/images/editIcon.gif" alt="Edit Icon">
-              <a data-reveal-id="teamwindow-modal">Edit</a>
+              <a href data-reveal-id="teamwindow-modal">Edit</a>
             </h6>
           <%end%>
         </div>
